# tech_read_bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/tech_read_bot/: bot.py  main.py  setup_log.py  utils.py
src/tech_read_bot/database/: __init__.py  dao.py  models.py
