[project]
name = "tech_read_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pongpatapee", email = "pongpatapee1021@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
